[gd_scene load_steps=7 format=3 uid="uid://b3fspvpn1bo6l"]

[ext_resource type="Script" path="res://power/card.gd" id="1_vk6vc"]
[ext_resource type="Resource" uid="uid://3v6jqqqptbu0" path="res://power/cards/cocktail.tres" id="2_7u1ev"]
[ext_resource type="FontFile" uid="uid://c67amo7dbl1io" path="res://power/assets/Minecraft.ttf" id="3_gabdj"]

[sub_resource type="LabelSettings" id="LabelSettings_77yqb"]
font = ExtResource("3_gabdj")

[sub_resource type="LabelSettings" id="LabelSettings_g3q1l"]
font = ExtResource("3_gabdj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbip0"]
size = Vector2(143, 309)

[node name="Card" type="Node2D"]
position = Vector2(1, -1)
script = ExtResource("1_vk6vc")
resource = ExtResource("2_7u1ev")
metadata/_edit_group_ = true

[node name="Effects" type="Label" parent="."]
offset_left = -69.0
offset_top = 121.0
offset_right = 70.0
offset_bottom = 161.0
label_settings = SubResource("LabelSettings_77yqb")

[node name="Button" type="Area2D" parent="."]
position = Vector2(1, 1)

[node name="Texture" type="Sprite2D" parent="Button"]
position = Vector2(-2, 2)

[node name="Name" type="Label" parent="Button/Texture"]
offset_left = -29.0
offset_top = 81.0
offset_right = 195.0
offset_bottom = 130.0
text = "Cocktail

"
label_settings = SubResource("LabelSettings_g3q1l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button"]
position = Vector2(-1.5, 44.5)
shape = SubResource("RectangleShape2D_wbip0")

[connection signal="input_event" from="Button" to="." method="_on_button_input_event"]
[connection signal="mouse_entered" from="Button" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_area_2d_mouse_exited"]
